# predict_selfreport_items

./: Dockerfile  README.md  pyproject.toml
predict_selfreport_items/: collect_sensor_features.py  evaluate_model_performance.py  predict_selfreport_CV.py  predict_selfreport_evaluation.py  run_model.py  sensor_feature_qc.py
run_scripts/: run_feature_collect.sh  run_pipeline.sh  run_prediction.sh
tests/: test_predict_selfreport_CV.py
