[tool.poetry]
name = "predict-selfreport-items"
version = "0.1.0"
description = ""
authors = ["Samir Akre <sakre@g.ucla.edu>"]
readme = "README.md"
packages = [{include = "predict_selfreport_items"}]

[tool.poetry.dependencies]
python = ">=3.10"
tqdm = "^4.65.0"
p-tqdm = "^1.4.0"
pingouin = "^0.5.3"
shap = ">=0.43.0"
scikit-learn = "^1.3.0"
sklearn2pmml = "^0.101.0"
pytest = "^7.4.4"
pyarrow = "^16.1.0"
mhealth-feature-generation = {git = "https://github.com/akre96/mHealth-feature-generation"}


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.7.0"
ipykernel = "^6.29.4"
mhealth-anomaly-detection = {git = "https://github.com/akre96/mhealth_anomaly_detection"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79